# wkslight

./: .gitignore  .gitmodules  Makefile  README.md  android-build.sh  cargo-apk.sh  cargo-run-pc.sh  dll-test-python.bat  dll-test-python.sh  dll-test.py  example.json  gmake-build.bat  gmake-pc.sh  gmake-web.sh  gmake.sh  index.data  index.html  index.js  index.wasm  mmake-web.bat  msbuild-windows-uwp.bat  msbuild-windows.bat  msvc-build-project.bat  msvc-build.bat  msvc-dumpbin.bat  msvc-lib.bat  premake5-clean.bat  premake5-generate-android.bat  premake5-generate-android.sh  premake5-generate-gmake.bat  premake5-generate-gmake.sh  premake5-generate-gmake2.bat  premake5-generate-uwp.bat  premake5-generate-web.bat  premake5-generate-web.sh  premake5-generate-windows-uwp.bat  premake5-generate-windows.bat  premake5-wkslight.lua  premake5.lua  premake5_clean.sh  (+18 more)
.github/workflows/: ci.yml  ci_android.yml  ci_pc.yml  ci_uwp.yml  ci_web.yml
all_gen/: premake5.lua
app/: Package.appxmanifest  premake5.lua
app-rs/: .gitignore  Cargo.toml  build.rs
app-rs-android/: Cargo.toml
app-rs-android/.cargo/: config-deprecated.toml  config.toml
app-rs-android/src/: lib.rs
app-rs/.cargo/: config-deprecated.toml  config.toml
app-rs/logs/: log_2025-03-15.txt
app-rs/src/: lib.rs  main.rs
app/assets/: hello.lua
app/doc/: SDL2.props
app/src/: Main.cpp  Web.h  main.cpp  pch.h
app/src-java/: AndroidManifest.xml  main_activity.java
foobar/: premake5.lua
scripts/: 11-premake5-generate-android.sh  12-premake5-generate-pc-gmake.sh  12-premake5-generate-pc.sh  14-premake5-generate-web.sh  21-android-build.sh  22-gmake-pc.sh  24-gmake-web.sh  32-tool-run-pc.sh  34-tool-run-web.sh  4-tool-test.py  42-tool-test.py  50-tool-tree.sh  android-buildw.sh  cargo-apk.sh  cargo-run-pc.sh  cmake-build.sh  gmake-pc.sh  gmake-web.sh  msbuild-windows-uwp.bat  msbuild-windows.bat  ninja-build.bat  ninja-build.sh  premake5-bootstrap.sh  premake5-clean.bat  premake5-generate-pc-cmake.sh  premake5-generate-pc-gmake.sh  premake5-generate-pc-ninja.bat  premake5-generate-pc-ninja.sh  premake5-generate-pc-vs.bat  premake5-generate-pc-xcode.sh  premake5-generate-uwp.bat  premake5-generate-web.sh  premake5-generate-windows-uwp.bat  premake5-generate-windows.bat  test-py.bat  test-py.py  test-py.sh  tests.bat  tests.sh  tool-download-sdl2.bat  (+41 more)
tests/: premake5.lua
tests/src/: main.cpp
(+156 files in other folders)
