[package]
name = "app-rs-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
libc = "0.2.172"
log = "0.4.27"
ndk = { version = "0.9", features = ["api-level-23"] }
ndk-context = "0.1.1"
android_logger = "0.15.0"
android-activity = { version = "0.6", features = ["native-activity"] }

[profile.android-cargo-apk]
inherits = "dev"

[package.metadata.android]
package = "com.wkslight.example"
build_targets = ["aarch64-linux-android"]
resources = "../app/meta/android/res"
assets = "../app/assets"
apk_name = "app"
strip = "strip"

[package.metadata.android.signing.android-cargo-apk]
path = "../../../../.android/wkslight.keystore"
keystore_password = "android"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 33

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "wkslight"