[package]
name = "app-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "app"
#crate-type = ["cdylib"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
libc = "0.2"
log = "0.4"
ndk = { version = "0.8", features = ["api-level-31"] }
ndk-context = "0.1.1"
android_logger = "0.11"
android-activity = { version = "0.5", features = ["native-activity"] }

[package.metadata.android]
package = "com.wkslight.example"
build_targets = ["aarch64-linux-android"]
resources = "meta/android/res"
assets = "../app/assets"
apk_name = "wkslight"
strip = "strip"

[package.metadata.android.signing.android-release]
path = "../../../../.android/wkslight.keystore"
keystore_password = "android"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 33

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "wkslight"

[package.metadata.android.application.activity]
orientation = "landscape"